--- a/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-Node.Js/dia-1-intro-Node.js-Um-motor-JavaScript/hello-world/package.json
+++ b/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-Node.Js/dia-1-intro-Node.js-Um-motor-JavaScript/hello-world/package.json
@@ -8,5 +8,8 @@
     "start": "node index.js"
   },
   "author": "Ton Lima",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
