--- a/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-Node.Js/dia-1-intro-Node.js-Um-motor-JavaScript/my-scipts/package.json
+++ b/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-Node.Js/dia-1-intro-Node.js-Um-motor-JavaScript/my-scipts/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node imc.js",
-    "imc": "node imc.js"
-
+    "start": "node imc.js"
   },
   "author": "Ton Lima",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
